@@ -949,6 +949,7 @@ scid-4.3
 		- PND is still special as it is used to link to various complex
 		  locations like Wikipedia (including NLS) and SeeAlso. This is
 		  still treated internally
+	* Add "Open Comment editor" to PGN context menu
 - Fixes :
 	* Improve documentation for opening trainer (thanks ot Dale Hards)
 	* Fixed a bug in exception handling of Novag Citrine connection
@@ -963,6 +964,8 @@ scid-4.3
 	* Correct move numbers in engine PV output in locked mode
 	  (http://sourceforge.net/tracker/index.php?func=detail&aid=3001826&group_id=26963&atid=389080)
 	* Limit the history list of FEN notation in board setup (thanks to Steve)
+	* Toggle autoplay mode was mapped to Ctrl-z instead of Ctrl-Z so it confliced with undo
+	* Allow to insert all major NAGs by just pressing ?<enter> !<enter> etc. independent of the current window
 - Language updates:
 	* brazilian portugese translation (thanks ot Gilberto de Almeida Peres)
 	* nederland translation (thanks to Leander Laruelle)
